add some core logic; add service fileds